2007-02-20  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsproxy/nsproxylib.c: Uses ns_poll instead of poll.
	* configure.in: Simplified calculation of TCL_LIB
	* nsd/connio.c: Removed definition of UIO_MAXIOV
	* nsd/nsd.h: Added platform-specific def of UIO_MAXIOV.
	If not defined, assume 16.

2007-02-19  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/adprequest.c:
	* nsd/return.c: Updated to return chunked response to
	clients with HTTP/1.1 only, for older protocols return
	as HTTP/1.0 without Content-Length header.

2007-02-07  Vlad Seryakov  <seryakov@users.sf.net>

	* configure.in: changed inet_ntop macro to use AC_CHECK_FUNC

2007-01-20  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/encoding.c: Change message about encoding loaded 
	from Notice to Debug level. This message is printed on server 
	start before even log file is opened.

2007-01-16  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/tcltime.c (NsTclInitTimeType): Remove unneeded (and wrong on
	x86-64) int/long size test.
	Bug #1636688. Thanks, Martin Matuska.

	* doc/src/mann/ns_limits.man: Document the ns_limits commands.
	* doc/src/ns_limits_get.man:
	* doc/src/ns_limits_list.man:
	* doc/src/ns_limits_register.man:
	* doc/src/ns_limits_set.man: Removed.

	* doc/src/mann/ns_cookie.man: Consolidate the cookie documentation.
	* doc/src/ns_getcookie.man:
	* doc/src/ns_setcookie.man:
	* doc/src/ns_deletecookie.man:

2007-01-09  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/adprequest.c: Fixed bug when ADP flag for processing .tcl
	files was not set correctly

2007-01-06  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/nsconf.c: Made jobtimeout having default value of 300
	seconds to exit unnecassary job threads
	
	* nsd/nsmain.c: Changed config file processing logic, if none is 
	given the server will try to find nsd.tcl in the conf/ subdir 
	taking the base path from executable. This requirements looks very
	non-modern nowadays, Apache uses default but can take full path, for
	example.
